# micro-grad

./: best_dqn_model.pkl  dqn_lunar_lander.py  main.py  model_checkpoint_120.pkl  model_checkpoint_180.pkl  model_checkpoint_240.pkl  model_checkpoint_60.pkl  pyproject.toml  requirements.txt
micrograd/: function.py  linear_regression.py  module.py  plot.ipynb  tensor.py  tensor_nd.py
test/: linear_regression.py  mnist.py  tensor_nd_example.py  test.py  test_gradient.py  test_linear_regression.py  test_softmax.py
tinygrad/: loss.py  module.py  module_v2.py  tensor.py  tensor_reformat.py  test.py  test_cnn.py  test_cnn_simple.py  test_softmax.py  train_cnn_mnist.py  train_mnist.py
tinygrad/models/: best_model.pkl
